add_executable(e6h4 exer6/TestTA.cpp exer6/Person.h exer6/Person.cpp exer6/student.h
        exer6/graduate.h exer6/teacher.h exer6/TA.h exer6/birthday.h exer6/birthday.cpp)
add_executable(e6s1 exer6/TestAccount.cpp exer6/Account.cpp exer6/Account.h exer6/Date.h exer6/Date.cpp)
add_executable(e7h1 exer7/TestPoint.cpp exer7/Point.cpp exer7/Point.h)
add_executable(e7h3 exer7/TestPerson.cpp exer7/Person.cpp exer7/Person.h exer7/birthday.cpp exer7/birthday.h)
add_executable(e7s1 exer7/TestAccount.cpp exer7/Date.cpp exer7/Date.h exer7/Account.h exer7/Account.cpp)